kube/folls.api.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: folls.api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: folls.api
  template:
    metadata:
      labels:
        app: folls.api
    spec:
      containers:
      - name: folls-api
        image: dlike/folls.api:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: folls-api
  labels:
    app: folls.api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: folls.api
