kube/folls.mongo.statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: folls-mongo
  labels:
    app: folls.mongo
spec:
  ports:
  - port: 80
    name: folls-mongo
  clusterIP: None
  selector:
    app: folls.mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: folls-mongo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: folls.mongo
  serviceName: folls-mongo
  template:
    metadata:
      labels:
        app: folls.mongo
    spec:
      containers:
      - name: folls-mongo
        image: dlike/folls.mongo:latest
        ports:
          - containerPort: 27017
            name: folls-mongo
