kube/folls.ui.service.yml
apiVersion: v1
kind: Service
metadata:
  name: folls-ui
  labels:
    app: folls.ui
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: folls.ui
